--- a/RoadVision_Backend/pyproject.toml
+++ b/RoadVision_Backend/pyproject.toml
@@ -1,5 +1,5 @@
 [project]
-name = "yolopothole"
+name = "roadvision_lagos_backend"
 version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
